# representation-itl

./: .gitignore  README.md  setup.cfg
src/: divergences.py  kernel_utils_torch.py  matrix_itl.py  matrix_itl_approx.py  matrix_itl_torch_approx.py
src/repitl/: difference_of_entropies.py  divergences.py  informativeness.py  kernel_utils.py  matrix_itl.py  matrix_itl_approx.py
src/representation_itl.egg-info/: PKG-INFO  SOURCES.txt
