[metadata]
name = representation_itl
version = 1.0.2
description = Representation-based information-theoretic functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uk-cliplab/representation-itl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
#author = Example Author
#author_email = author@example.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch
    numpy
    
[options.packages.find]
where = src
